forgot some bullets

--- a/cityworld/version.html
+++ b/cityworld/version.html
@@ -157,9 +157,12 @@
 	<li>Fixed Floating&#39;s IncludeFloatingSubsurface option and documented it finally. If you set this to false then the world the cities are floating over won&#39;t be generated.</li>
 </ul>
 
-<p>v2.991<br />
-Added a lot more stuff to Astral (buried cities, empty bases, abandoned saucers, strange forests, strange towers and much more...)<br />
-Next up: Zea World, along with some other customization suggested by you guys</p>
+<p>v2.991</p>
+
+<ul>
+	<li>Added a lot more stuff to Astral (buried cities, empty bases, abandoned saucers, strange forests, strange towers and much more...)</li>
+	<li>Next up: Zea World, along with some other customization suggested by you guys</li>
+</ul>
 
 <p>v2.99</p>
 
@@ -286,18 +289,24 @@ Next up: Zea World, along with some other customization suggested by you guys</p
 	<li>More refactoring and optimization via [[http://dev.bukkit.org/server-mods/cityworld/pages/tools/|YourKit]]</li>
 </ul>
 
-<p>v1.10<br />
-Refactored tons of code to simplify options combinations and get things ready for End generation<br />
-Painting crosswalks on roads even if wool isn&#39;t being used<br />
-Made wool roads something you have opt into<br />
-Fixed a bunch of bugs associated with farms related to nether and decayed nature<br />
-Made the nether more nether like... including FIRE!<br />
-Decayed nature now doesn&#39;t mean Nether, which makes Normal worlds much more normal<br />
-Fixed an issue with 2 story houses where the attic stairs would sometimes lead to a block</p>
+<p>v1.10</p>
 
-<p>v1.07<br />
-Fixed a decayedNature vs. Normal world issue<br />
-Made the decayed signs a bit less decayed</p>
+<ul>
+	<li>Refactored tons of code to simplify options combinations and get things ready for End generation</li>
+	<li>Painting crosswalks on roads even if wool isn&#39;t being used</li>
+	<li>Made wool roads something you have opt into</li>
+	<li>Fixed a bunch of bugs associated with farms related to nether and decayed nature</li>
+	<li>Made the nether more nether like... including FIRE!</li>
+	<li>Decayed nature now doesn&#39;t mean Nether, which makes Normal worlds much more normal</li>
+	<li>Fixed an issue with 2 story houses where the attic stairs would sometimes lead to a block</li>
+</ul>
+
+<p>v1.07</p>
+
+<ul>
+	<li>Fixed a decayedNature vs. Normal world issue</li>
+	<li>Made the decayed signs a bit less decayed</li>
+</ul>
 
 <p>v1.06</p>
 
