--- a/cityworld/version.html
+++ b/cityworld/version.html
@@ -3,7 +3,14 @@
 	<title></title>
 </head>
 <body>
-<p>&nbsp;</p>
+<p>v3.012</p>
+
+<ul>
+	<li>Made all the balloon wool again</li>
+	<li>Fixed a Floating world vs. ConcreteLot problem</li>
+	<li>Made RadioTowers use the right light on top</li>
+	<li>Removed some dead and/or icky code</li>
+</ul>
 
 <p>v3.011</p>
 
