Continuing my efforts to redocument everything

--- a/cityworld/version.html
+++ b/cityworld/version.html
@@ -6,7 +6,7 @@
 <p>v3.012</p>
 
 <ul>
-	<li>Made all the balloon wool again</li>
+	<li>Made all the balloons wool again, sorry about that folks</li>
 	<li>Fixed a Floating world vs. ConcreteLot problem</li>
 	<li>Made RadioTowers use the right light on top</li>
 	<li>Removed some dead and/or icky code</li>
