--- a/cityworld/options.html
+++ b/cityworld/options.html
@@ -1,11 +1,24 @@
 <html>
 <head>
-	<title></title>
+	<title>Options</title>
 </head>
 <body>
+
+<h3>Index of useful info</h3>
+<ul>
+<li><a href="http://echurch.github.io/cityworld/installation.html/">Installation...</a> <i>Start Here!</i></li>
+<li><a href="http://echurch.github.io/cityworld/options.html">Options...</a> <b>(you are here)</b></li>
+<li><a href="http://echurch.github.io/cityworld/styles.html">Styles...</a></li>
+<li><a href="http://echurch.github.io/cityworld/schematics.html">Schematics...</a></li>
+<li><a href="http://echurch.github.io/cityworld/commands.html">Commands...</a></li>
+<li><a href="http://echurch.github.io/cityworld/versions.html">Version info...</a></li>
+<li><a href="http://echurch.github.io/cityworld/tools.html/">Tools I used to make this...</a></li>
+<li><a href="http://echurch.github.io/cityworld/copyright.html">Copyright...</a></li>
+</ul>
+
 <p>&nbsp;</p>
 
-<p>Options</p>
+<h2>Options</h2>
 
 <p>A Config.yml file is generated when CityWorld first runs and each time it is told to create a new world. 
 These options only affect &quot;new generation&quot;, changing them after a world has been generated will produce some odd results.</p>
