--- a/cityworld/versions.html
+++ b/cityworld/versions.html
@@ -1,8 +1,25 @@
 <html>
 <head>
-	<title></title>
+	<title>Versions</title>
 </head>
 <body>
+
+<h3>Index of useful info</h3>
+<ul>
+<li><a href="http://echurch.github.io/cityworld/installation.html/">Installation...</a> <i>Start Here!</i></li>
+<li><a href="http://echurch.github.io/cityworld/options.html">Options...</a></li>
+<li><a href="http://echurch.github.io/cityworld/styles.html">Styles...</a></li>
+<li><a href="http://echurch.github.io/cityworld/schematics.html">Schematics...</a></li>
+<li><a href="http://echurch.github.io/cityworld/commands.html">Commands...</a></li>
+<li><a href="http://echurch.github.io/cityworld/versions.html">Version info...</a> <b>(you are here)</b></li>
+<li><a href="http://echurch.github.io/cityworld/tools.html/">Tools I used to make this...</a></li>
+<li><a href="http://echurch.github.io/cityworld/copyright.html">Copyright...</a></li>
+</ul>
+
+<p>&nbsp;</p>
+
+<h2>Versions</h2>
+
 <p>v3.012</p>
 
 <ul>
@@ -10,6 +27,9 @@
 	<li>Fixed a Floating world vs. ConcreteLot problem</li>
 	<li>Made RadioTowers use the right light on top</li>
 	<li>Removed some dead and/or icky code</li>
+	<li>Fixed a three and four wide chest issue, thanks NullBlox for the great bug report</li>
+	<li>Found and fixed an issue if you call <code>/CityChunk regen</code> on a chunk that happened to have an entrance/exit 
+	to bunker in it. It was a very interesting effect and I hope to never see it again.</li>
 </ul>
 
 <p>v3.011</p>
@@ -149,7 +169,7 @@
 	<li>WARNING: WorldEdit itself has changed quite a bit, I haven&#39;t tried to update the CityWorld for the latest incarnation of WorldEdit. If it works, great. If not, it will eventually. SORRY</li>
 </ul>
 
-<p><br type="_moz" />
+<p>
 <strong>The above versions are found at&nbsp;<a href="https://www.spigotmc.org/resources/cityworld.2250/">https://www.spigotmc.org/resources/cityworld.2250/</a></strong></p>
 
 <p><strong>---------------------------</strong></p>
