--- a/cityworld/tools.html
+++ b/cityworld/tools.html
@@ -1,33 +1,89 @@
 <html>
 <head>
-	<title></title>
+	<title>Tools</title>
+<style>
+table, th, td {
+	border: 1px solid black;
+	border-collapse: collapse;
+}
+</style>
 </head>
 <body>
+
+<h3>Index of useful info</h3>
+<ul>
+<li><a href="http://echurch.github.io/cityworld/installation.html/">Installation...</a> <i>Start Here!</i></li>
+<li><a href="http://echurch.github.io/cityworld/options.html">Options...</a></li>
+<li><a href="http://echurch.github.io/cityworld/styles.html">Styles...</a></li>
+<li><a href="http://echurch.github.io/cityworld/schematics.html">Schematics...</a></li>
+<li><a href="http://echurch.github.io/cityworld/commands.html">Commands...</a></li>
+<li><a href="http://echurch.github.io/cityworld/versions.html">Version info...</a></li>
+<li><a href="http://echurch.github.io/cityworld/tools.html/">Tools I used to make this...</a> <strong>(you are here)</strong></li>
+<li><a href="http://echurch.github.io/cityworld/copyright.html">Copyright...</a></li>
+</ul>
+
 <p>&nbsp;</p>
 
-<h1>Following is a list of the tools I use for this project...</h1>
+<h2>Tools I used to make this...</h2>
 
-<p><a href="http://dev.bukkit.org/server-mods/worldedit/"><strong>WorldEdit</strong></a></p>
-
-<p>One of the better tools for creating schematics</p>
-
-<p><a href="http://www.eclipse.org"><strong>Eclipse</strong></a></p>
-
-<p>Great editor for Java projects</p>
-
-<p><a href="http://www.github.com">GitHub</a></p>
-
-<p>The source repository of choice, I like it so much I put my stuff there</p>
-
-<p><a href="http://findbugs.sourceforge.net">FindBugs</a></p>
-
-<p>This plugin keeps my code honest. The first time I used this it found so much stuff it took me a week to refactor everything. I learned a lot from what it found and the explanations it gave. Great Stuff Indeed!</p>
-
-<p><a href="http://www.yourkit.com">YourKit</a></p>
-
-<p>While this is an odd name for a code profiler, it works great. In the past I found tools like this to be a pain to set up and get working with my code but this one worked first time out the door. Keep in mind that I am profiling a plugin (CityWorld) to a variant (Spigot) of a mod (Bukkit) to a server (MineCraft) while I played with a client (MineCraft). Crazy eh! They also support open source projects with a free license. So cool!</p>
-
-<p><em>YourKit is kindly supporting open source projects with its full-featured Java Profiler. YourKit, LLC is the creator of innovative and intelligent tools for profiling Java and .NET applications. Take a look at YourKit&#39;s leading software products: <a href="http://www.yourkit.com/java/profiler/index.jsp">YourKit Java Profiler</a> and <a href="http://www.yourkit.com/.net/profiler/index.jsp">YourKit .NET Profiler</a>.</em></p>
+<table style="width:75%">
+	<tr>
+		<th>Tool</th>
+		<th>Description</th>
+	</tr>
+	<tr>
+		<td><a href="http://www.eclipse.org">Eclipse</a></td>
+		<td>
+			<p>&nbsp;</p>
+			Great editor for Java projects
+			<p>&nbsp;</p>
+		</td>
+	</tr>
+	<tr>
+		<td><a href="http://www.github.com">GitHub</a></td>
+		<td>
+			<p>&nbsp;</p>
+			The source repository of choice, I like it so much I put my stuff there
+			<p>&nbsp;</p>
+		</td>
+	</tr>
+	<tr>
+		<td><a href="http://findbugs.sourceforge.net">FindBugs</a></td>
+		<td>
+			<p>&nbsp;</p>
+			This plugin keeps my code honest. 
+			The first time I used this it found so much stuff it took me a week to refactor everything to correct everything it found. 
+			I learned a lot from what it flagged and the explanations it gave. 
+			Great Stuff Indeed!
+			<p>&nbsp;</p>
+		</td>
+	</tr>
+	<tr>
+		<td><a href="http://www.yourkit.com">YourKit</a></td>
+		<td>
+			<p>&nbsp;</p>
+			While this is an odd name for a code profiler, it works great. 
+			In the past I found tools like this to be a pain to set up and get working with my code but this one worked first time out the door. 
+			Keep in mind that I am profiling a plugin (CityWorld) to a variant (Spigot) of a mod (Bukkit) to a server (MineCraft) while I played with a client (MineCraft). 
+			Crazy eh! They also support open source projects with a free license. So cool!
+			<p>&nbsp;</p>
+			<em>YourKit is kindly supporting open source projects with its full-featured Java Profiler. YourKit, 
+			LLC is the creator of innovative and intelligent tools for profiling Java and .NET applications. 
+			Take a look at YourKit&#39;s leading software products: 
+			<a href="http://www.yourkit.com/java/profiler/index.jsp">YourKit Java Profiler</a> and 
+			<a href="http://www.yourkit.com/.net/profiler/index.jsp">YourKit .NET Profiler</a>.</em>
+			<p>&nbsp;</p>
+		</td>
+	</tr>
+	<tr>
+		<td><a href="http://dev.bukkit.org/server-mods/worldedit/">WorldEdit</a></td>
+		<td>
+			<p>&nbsp;</p>
+			One of the better tools for creating schematics
+			<p>&nbsp;</p>
+		</td>
+	</tr>
+</table>
 
 <p>&nbsp;</p>
 </body>
