--- a/cityworld/options.html
+++ b/cityworld/options.html
@@ -7,7 +7,7 @@
 <h3>Index of useful info</h3>
 <ul>
 <li><a href="http://echurch.github.io/cityworld/installation.html/">Installation...</a> <i>Start Here!</i></li>
-<li><a href="http://echurch.github.io/cityworld/options.html">Options...</a> <b>(you are here)</b></li>
+<li><a href="http://echurch.github.io/cityworld/options.html">Options...</a> <strong>(you are here)</strong></li>
 <li><a href="http://echurch.github.io/cityworld/styles.html">Styles...</a></li>
 <li><a href="http://echurch.github.io/cityworld/schematics.html">Schematics...</a></li>
 <li><a href="http://echurch.github.io/cityworld/commands.html">Commands...</a></li>
