Updated with v3.013 info

--- a/cityworld/versions.html
+++ b/cityworld/versions.html
@@ -20,6 +20,29 @@
 
 <h2>Versions</h2>
 
+<p>v3.013</p>
+
+<ul>
+	<li>Fixed a bug in my minecraft/spigot version checking, sorry about that</li>
+	<li>Fixed a three and four wide chest issue, thanks <b>NullBlox</b> for the great bug report</li>
+	<li>Found and fixed an issue if you call <code>/CityChunk regen</code> on a chunk that happened to have an entrance/exit 
+	to bunker in it. It was a very interesting effect and I hope to never see it again.</li>
+	<li>Fixed an issue where debris would be floating up in the air instead of on the ground</li>
+	<li>Fixed a rare situation where occasionally trees formed in road tunnel entrances</li>
+	<li>Fixed a block removal problem that sometimes would happen when an entities spawned in</li>
+	<li>Fixed a backfill issue with roundabouts</li>
+	<li>Removed museums from industrial areas, increased the odds of them in the city center</li>
+	<li>Added more variety to factories</li>
+	<li>Added experimental villager naming support, if you don't like it you can set the new option <code>NameVillagers</code> to <code>FALSE</code>. 
+	To turn off the automatic showing of the villager's name set the <code>ShowVillagersNames</code> to <code>FALSE</code>.
+	I know the names are a bit too US/Euro centric but getting an unified list of the top names in the world is hard.
+	If you come across one send it my way. Regardless, you can customize the list.</li>
+	<li>Speaking of customizing, you can now customize the street and fossil names too!</li>
+	<li>Minecraft (1.9.4 and 1.10) and Spigot (as of 6/16) happy.
+	It does not add any of the new blocks or entity in by default but you should be able to 
+	include them in your world by adding them to the custom material and entity lists.</li>
+</ul>
+
 <p>v3.012</p>
 
 <ul>
@@ -27,9 +50,6 @@
 	<li>Fixed a Floating world vs. ConcreteLot problem</li>
 	<li>Made RadioTowers use the right light on top</li>
 	<li>Removed some dead and/or icky code</li>
-	<li>Fixed a three and four wide chest issue, thanks NullBlox for the great bug report</li>
-	<li>Found and fixed an issue if you call <code>/CityChunk regen</code> on a chunk that happened to have an entrance/exit 
-	to bunker in it. It was a very interesting effect and I hope to never see it again.</li>
 </ul>
 
 <p>v3.011</p>
