--- a/cityworld/versions.html
+++ b/cityworld/versions.html
@@ -20,10 +20,16 @@
 
 <h2>Versions</h2>
 
+<p>v3.015</p>
+
+<ul>
+	<li>nothing yet</li>
+</ul>
+
 <p>v3.014</p>
 
 <ul>
-	<li>Nothing yet</li>
+	<li>Oops, left in some debug block generation</li>
 </ul>
 
 <p>v3.013</p>
