--- a/cityworld/versions.html
+++ b/cityworld/versions.html
@@ -23,7 +23,7 @@
 <p>v3.015</p>
 
 <ul>
-	<li>nothing yet</li>
+	<li>Added Government buildings along with many new monument types... including one to Minecraft's Deity: The Chicken</li>
 </ul>
 
 <p>v3.014</p>
