--- a/cityworld/versions.html
+++ b/cityworld/versions.html
@@ -20,11 +20,25 @@
 
 <h2>Versions</h2>
 
-<p>v3.015</p>
+<p>v3.017</p>
+
+<ul>
+	<li>Fixed a bug that made the cities WAY too New Your city like</li>
+</ul>
+
+<p>v3.016</p>
 
 <ul>
 	<li>Added Government buildings along with many new monument types... including one to Minecraft's Deity: The Chicken</li>
 </ul>
+
+<p>v3.015</p>
+
+<ul>
+	<li>Made the <code>/CityWorld</code> command tell users about the various world types it knows about when presented with incorrect info</li>
+	<li>Made the <code>/CityInfo</code> command more resilient to non-CityWorld situations</li>
+</ul>
+
 
 <p>v3.014</p>
 
