Updating some stuff

--- a/cityworld/versions.html
+++ b/cityworld/versions.html
@@ -20,6 +20,14 @@
 
 <h2>Versions</h2>
 
+<p>v3.018</p>
+
+<ul>
+	<li>Made CityWorld more resilient to WorldEdit issue. 
+	Now if WorldEdit has an issue, instead of causing an exception, CityWorld will simply not use WorldEdit... 
+	mind you it also means you won't get schema pasting.</li>
+</ul>
+
 <p>v3.017</p>
 
 <ul>
